<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/home">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/home" />

                <item
                    android:id="@+id/nav_dashboard"
                    android:icon="@drawable/baseline_dashboard_24"
                    android:title="@string/dashboard" />
            </group>
        </menu>
    </item>

    <item android:title="Settings">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_update_profile"
                    android:icon="@drawable/baseline_face_24"
                    android:title="@string/profile" />
            </group>
        </menu>
    </item>

    <item android:title="Navigation">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_about_us"
                    android:icon="@drawable/baseline_arrow_forward_24"
                    android:title="About Us" />

                <item
                    android:id="@+id/nav_an_overview"
                    
                    android:title="An Overview" />

                <item
                    android:id="@+id/nav_complaint"
                    android:icon="@drawable/profile"
                    android:title="Privacy Policy" />
            </group>
        </menu>
    </item>


</menu>