<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    tools:context=".auth.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >


        <View
            android:id="@+id/view3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="37dp"
            android:background="@drawable/wave_up"
            app:layout_constraintBottom_toTopOf="@+id/email100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView100"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="136dp"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textColor="@color/colorSecondary"
            android:textSize="40sp"
            app:layout_constraintBottom_toBottomOf="@+id/view3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintBottom_toTopOf="@+id/forgotPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email100" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/roleSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="18dp"
            android:background="@drawable/round_border"
            android:popupBackground="@color/colorSecondary"
            android:dropDownVerticalOffset="40dp"
            android:spinnerMode="dropdown"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/email100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView100"
            app:layout_constraintVertical_bias="0.849" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/email100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_email_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintBottom_toTopOf="@+id/password100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="38dp"
            android:background="@drawable/round_bg"
            android:text="@string/loginBG"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button100">

            <View
                android:layout_width="155dp"
                android:layout_height="2dp"
                android:layout_gravity="center|start"
                android:layout_marginEnd="10dp"
                android:background="#FF0057" />




            <View
                android:layout_width="155dp"
                android:layout_height="2dp"
                android:layout_gravity="center|end"
                android:layout_marginStart="10dp"
                android:background="#FF0057" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="44dp"
            android:gravity="center"

            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/sendVerificationEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_border"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/resend_verification_email"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"
                android:visibility="invisible" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toTopOf="@+id/button100"
            app:layout_constraintEnd_toEndOf="@+id/button100"
            app:layout_constraintTop_toBottomOf="@+id/password100" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="54dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>