<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".auth.SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/roleSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_border"
        android:dropDownVerticalOffset="40dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="29dp"
        android:minHeight="48dp"
        android:popupBackground="@color/colorSecondary"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/name100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView100" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="46dp"
        android:layout_weight="1"
        android:text="Sign Up"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/roleSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/password100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="29dp"
            android:background="@drawable/round_border"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hint"
            app:layout_constraintBottom_toTopOf="@+id/button100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email100" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:minHeight="48dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/password100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name100" />

        <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="29dp"
        android:background="@drawable/round_border"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="16dp"
        android:ems="10"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="20dp"
        app:layout_constraintBottom_toTopOf="@+id/email100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView100" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button100"
            app:layout_constraintTop_toBottomOf="@+id/password100">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDOB"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="@drawable/round_bg"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="Select Date of Birth"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="20dp"
                android:textColor="@color/white"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/calendarTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="@drawable/round_border"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="Date of Birth"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button100"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="112dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/round_bg"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password100" />

        <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.942">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already a part of our family?  "
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="644dp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/log_in"
            android:textColor="@color/black"
            tools:layout_editor_absoluteX="272dp"
            tools:layout_editor_absoluteY="644dp" />
    </LinearLayout>

    <LinearLayout
        android:visibility="invisible"
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button100">

        <View
            android:layout_width="155dp"
            android:layout_height="2dp"
            android:layout_gravity="center|start"
            android:layout_marginEnd="10dp"
            android:background="#FF0057" />




        <View
            android:layout_width="155dp"
            android:layout_height="2dp"
            android:layout_gravity="center|end"
            android:layout_marginStart="10dp"
            android:background="#FF0057" />

    </LinearLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>